--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,14 @@ version: 1.0.3
 homepage: https://github.com/emrade/flutter_cool_alert.git
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flare_flutter: ^2.0.3
-  lottie: ^0.7.0+1
-  vector_math: ^2.0.8
+  lottie: ^1.0.1
+  vector_math: ^2.1.0
 
 dev_dependencies:
   flutter_test:
